# tantivy-py

./: Cargo.toml
src/: index.rs
