[package]
name = "tantivy-py"
version = "0.10.1"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"
license = "MIT"

[lib]
name = "tantivy"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
tantivy = { git = "https://github.com/karlicoss/tantivy", branch = "return-all-snippets" }
itertools = "0.8"

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]
